[package]
name = "tinkv"
version = "0.2.0"
authors = ["0xE8551CCB <noti@ifaceless.space>"]
edition = "2018"
description = "A simple key-value store"
keywords = ["database", "key-value"]
categories = ["Development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"
structopt = "0.3.14"
serde = {version = "1.0.111", features = ["derive"]}
thiserror = "1.0.19"
anyhow = "1.0.31"
chrono = "0.4.11"
crc = "1.8.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.1.0"
walkdir = "2.3.1"
