[[example]]
name = 'basic'
path = 'examples/basic.rs'

[[example]]
name = 'hello'
path = 'examples/hello.rs'

[package]
name = 'tinkv'
version = '0.9.1'
authors = ['0xE8551CCB <noti@ifaceless.space>']
edition = '2018'
description = 'A fast and simple key-value storage engine.'
keywords = [
    'database',
    'key-value',
    'storage',
]
categories = ['database-implementations']
license = 'MIT'
readme = "README.md"
homepage = "https://github.com/iFaceless/tinkv"

[dependencies]
clap = '2.33.1'
structopt = '0.3.14'
thiserror = '1.0.19'
anyhow = '1.0.31'
crc = '1.8.1'
glob = '0.3.0'
log = '0.4.8'
pretty_env_logger = '0.4.0'
impls = '1.0.3'
bincode = '1.2.1'
clap-verbosity-flag = "0.3.1"
bytefmt = "0.1.7"
lazy_static = "1.4.0"
os_info = "2.0.6"
sys-info = "0.7.0"

[dependencies.serde]
version = '1.0.111'
features = ['derive']

[dev-dependencies]
assert_cmd = '0.11.0'
predicates = '1.0.0'
tempfile = '3.1.0'
walkdir = '2.3.1'
